// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The profile component will render for logged in user in match mode 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 550,
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 10,
      "width": 900,
    }
  }
>
  <ForwardRef(Typography)
    color="primary"
    sx={
      Object {
        "fontSize": 22,
      }
    }
  >
    Hi Stub Display Name
  </ForwardRef(Typography)>
  <ForwardRef(FormControl)
    component="fieldset"
    variant="standard"
  >
    <ForwardRef(FormGroup)>
      <ForwardRef(FormControlLabel)
        control={
          <ForwardRef(Switch)
            checked={true}
            name="display_mode"
            onChange={[Function]}
          />
        }
        label="Matches"
      />
    </ForwardRef(FormGroup)>
  </ForwardRef(FormControl)>
  <MatchesTable
    opponents={
      Object {
        "0002": "Stub oponent name",
      }
    }
    rows={
      Array [
        Object {
          "__v": 0,
          "_id": "62dd04cb1a1a257ead39a1ea",
          "createdAt": "2022-07-24T08:37:31.809Z",
          "difficulty": 2,
          "looserDisqualified": true,
          "looserFloorsRaised": 0,
          "looserGoogleId": "0002",
          "looserLinesCleared": 0,
          "updatedAt": "2022-07-24T08:37:31.809Z",
          "winnerFloorsRaised": 0,
          "winnerGoogleId": "0001",
          "winnerLinesCleared": 0,
        },
        Object {
          "__v": 0,
          "_id": "62dc633b2464e19567160cb3",
          "createdAt": "2022-07-23T21:08:11.812Z",
          "difficulty": 4,
          "looserDisqualified": false,
          "looserFloorsRaised": 0,
          "looserGoogleId": "0001",
          "looserLinesCleared": 0,
          "updatedAt": "2022-07-23T21:08:11.812Z",
          "winnerFloorsRaised": 1,
          "winnerGoogleId": "0002",
          "winnerLinesCleared": 2,
        },
      ]
    }
    userId="0001"
  />
</ForwardRef(Box)>
`;

exports[`The profile component will render for logged in user in single mode 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 550,
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 10,
      "width": 900,
    }
  }
>
  <ForwardRef(Typography)
    color="primary"
    sx={
      Object {
        "fontSize": 22,
      }
    }
  >
    Hi Stub Display Name
  </ForwardRef(Typography)>
  <ForwardRef(FormControl)
    component="fieldset"
    variant="standard"
  >
    <ForwardRef(FormGroup)>
      <ForwardRef(FormControlLabel)
        control={
          <ForwardRef(Switch)
            checked={false}
            name="display_mode"
            onChange={[Function]}
          />
        }
        label="Single games"
      />
    </ForwardRef(FormGroup)>
  </ForwardRef(FormControl)>
  <SinglesTable
    onDelete={[Function]}
    rows={
      Array [
        Object {
          "__v": 0,
          "_id": "62e3f935616501f9bd180a71",
          "createdAt": "2022-07-29T15:13:57.976Z",
          "googleId": "0001",
          "levelReached": 9,
          "linesCleared": 49,
          "updatedAt": "2022-07-29T15:13:57.976Z",
        },
        Object {
          "__v": 0,
          "_id": "62dfd050d218114e5c901c43",
          "createdAt": "2022-07-26T11:30:24.576Z",
          "googleId": "0001",
          "levelReached": 12,
          "linesCleared": 60,
          "updatedAt": "2022-07-26T11:30:24.576Z",
        },
      ]
    }
  />
</ForwardRef(Box)>
`;

exports[`The profile component will render progress bar if no data fetched yet or rejected 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 550,
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 10,
      "width": 900,
    }
  }
>
  <ForwardRef(CircularProgress) />
</ForwardRef(Box)>
`;
